# cfnupd

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yaml
foo/: foo.yaml  parameters.json
src/: cfn.rs  helper.rs  main.rs
