[package]
name = "cfnupd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.56.1"
aws-sdk-cloudformation = "0.30.0"
clap = { version = "4.4.0", features = ["derive"]}
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
serde_yaml = "0.9.25"
tokio = { version = "1.32.0", features=["full"]}
tracing-subscriber = { version = "0.3.17", features=["env-filter"]}
