[package]
name = "cfnupd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
aws-config = "0.56.1"
aws-sdk-cloudformation = "0.30.0"
aws-smithy-http = "0.56.1"
clap = { version = "4.4.0", features = ["derive"]}
config = "0.13.3"
# console = "0.15.7"
dirs = "5.0.1"
# indicatif = "0.17.6"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
# serde_yaml = "0.9.25"
thiserror = "1.0.47"
tokio = { version = "1.32.0", features=["full"]}
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features=["env-filter"]}
